Bug squashing

--- a/app/assets/stylesheets/main/main_left/channel_list.css
+++ b/app/assets/stylesheets/main/main_left/channel_list.css
@@ -132,3 +132,8 @@
 .selected span {
   color: white !important;
 }
+
+.channels-errors {
+  text-align: center;
+  color: red;
+}
